--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,6 +24,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install google-generativeai PyGithub
 
+      - name: Get issue details
+        id: issue
+        run: |
+          echo "ISSUE_NUMBER=${{ github.event.issue.number }}" >> $GITHUB_OUTPUT
+          
       - name: Generate modified code with Gemini API
         id: gemini
         run: |
